# schedulatte

./: .gitignore  Cargo.toml  README.md  build.rs  config.ini  git-hooks-readme.md
.github/workflows/: release.yml
src/: main.rs
