[package]
name = "schedulatte"
version = "0.1.0"
edition = "2021"

# Add build script
build = "build.rs"

[dependencies]
chrono = "0.4"
configparser = "3.0"
sysinfo = "0.30"
tokio = { version = "1.36", features = ["full"] }
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
] }
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

# Configure binary as GUI app for release builds
[[bin]]
name = "schedulatte"
path = "src/main.rs"
